vmafd/include/public/vmafdclient.h

typedef struct _VMAFD_HB_HANDLE* PVMAFD_HB_HANDLE;
DWORD
VmAfdGetStatusA(
    PCSTR         pszServerName,  /* IN     OPTIONAL */
    PVMAFD_STATUS pStatus         /* IN OUT          */
    );
DWORD
VmAfdGetDomainNameA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PSTR* ppszDomain     /*    OUT          */
    );
DWORD
VmAfdSetDomainNameA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PCSTR pszDomain      /* IN              */
    );
DWORD
VmAfdGetDomainStateA(
    PCSTR pszServerName,              /* IN     OPTIONAL */
    VMAFD_DOMAIN_STATE* pDomainState  /*    OUT          */
    );
DWORD
VmAfdGetLDUA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PSTR* ppszLDU        /* IN              */
    );
DWORD
VmAfdSetLDUA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PCSTR pszLDU         /* IN              */
    );
DWORD
VmAfdGetRHTTPProxyPortA(
    PCSTR   pszServerName, /* IN    OPTIONAL */
    UINT32* pdwPort        /* IN    OPTIONAL */
    );
DWORD
VmAfdSetRHTTPProxyPortA(
    PCSTR  pwszServerName, /* IN    OPTIONAL */
    UINT32 dwPort          /* IN             */
    );
DWORD
VmAfdSetDCPortA(
    PCSTR  pwszServerName, /* IN    OPTIONAL */
    UINT32 dwPort          /* IN             */
    );
DWORD
VmAfdGetCMLocationA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PSTR* ppszCMLocation /*    OUT          */
    );
DWORD
VmAfdGetLSLocationA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PSTR* ppszLSLocation /*    OUT          */
    );
DWORD
VmAfdGetDCNameA(
    PCSTR pszServerName, /* IN     OPTIONAL */
    PSTR* ppszDCName     /*    OUT          */
    );
DWORD
VmAfdSetDCNameA(
    PCSTR pszServerName,    /* IN     OPTIONAL */
    PCSTR pszDCName         /* IN              */
    );
DWORD
VmAfdGetSiteGUIDA(
    PCSTR  pszServerName,  /* IN     OPTIONAL */
    PSTR*  ppszSiteGUID    /*    OUT          */
    );
DWORD
VmAfdGetSiteGUIDW(
    PCWSTR pszServerName,  /* IN     OPTIONAL */
    PWSTR* ppszSiteGUID    /*    OUT          */
    );
DWORD
VmAfdGetMachineIDA(
    PCSTR  pszServerName,  /* IN     OPTIONAL */
    PSTR*  ppszMachineID    /*    OUT          */
    );
DWORD
VmAfdGetMachineIDW(
    PCWSTR pszServerName,  /* IN     OPTIONAL */
    PWSTR* ppszMachineID   /*    OUT          */
    );
DWORD
VmAfdSetMachineIDA(
    PCSTR  pszServerName,  /* IN     OPTIONAL */
    PCSTR  pszMachineID    /* IN              */
    );
DWORD
VmAfdSetMachineIDW(
    PCWSTR  pszServerName,  /* IN     OPTIONAL */
    PCWSTR  pszMachineID    /* IN              */
    );
DWORD
VmAfdQueryADA(
    PCSTR pszServerName,        /* IN          OPTIONAL */
    PSTR *pszComputer,          /*    OUT               */
    PSTR *pszDomain,            /*    OUT               */
    PSTR *pszDistinguishedName, /*    OUT               */
    PSTR *pszNetbiosName        /*    OUT               */
    );
DWORD
VmAfdQueryADW(
    PCWSTR pwszServerName,        /* IN        OPTIONAL */
    PWSTR *pwszComputer,          /*    OUT             */
    PWSTR *pwszDomain,            /*    OUT             */
    PWSTR *pwszDistinguishedName, /*    OUT             */
    PWSTR *pwszNetbiosName        /*    OUT             */
    );
DWORD
VmAfdGetSSLCertificate(
    PCSTR pszServerName,
    PSTR *ppszCert,
    PSTR *ppszPrivateKey
);
DWORD
VmAfdSetSSLCertificate(
    PCSTR pszServerName,
    PSTR  pszCert,
    PSTR  pszPrivateKey
);
DWORD
VmAfdGetPNIDForUrlA(
    PCSTR pszServerName,
    PSTR* ppszPNIDUrl
    );
DWORD
VmAfdGetPNIDA(
    PCSTR pszServerName,
    PSTR* ppszPNID
    );
DWORD
VmAfdSetPNIDA(
    PCSTR pszServerName,
    PCSTR pszPNID
    );
DWORD
VmAfdStartHeartbeatA(
    PCSTR  pszServiceName,
    DWORD  dwServicePort,
    PVMAFD_HB_HANDLE *ppHandle
    );
DWORD
VmAfdStartHeartbeatW(
    PCWSTR pwszServiceName,
    DWORD  dwServicePort,
    PVMAFD_HB_HANDLE *ppHandle
    );
VOID
VmAfdStopHeartbeat(
    PVMAFD_HB_HANDLE pHandle
    );