vmafd/interop/java/vmaf/src/main/java/com/vmware/af/interop/VmAfClientAdapter.java


        int
        VmAfdQueryADA(
            String pszServerName,                     /* IN              */
            PointerByReference ppszComputer,          /*    OUT          */
            PointerByReference ppszDomain,            /*    OUT          */
            PointerByReference ppszDistinguishedName, /*    OUT          */
            PointerByReference ppszNetbiosName        /*    OUT          */
            );

        int
        VmAfdQueryADW(
            WString pwszServerName,                    /* IN              */
            PointerByReference ppwszComputer,          /*    OUT          */
            PointerByReference ppwszDomain,            /*    OUT          */
            PointerByReference ppwszDistinguishedName, /*    OUT          */
            PointerByReference ppwszNetbiosName        /*    OUT          */
            );

        int
        VmAfdGetSiteGUIDA(
            String pszServerName,                      /* IN              */
            PointerByReference ppszSiteGUID            /*    OUT          */
            );

        int
        VmAfdGetSiteGUIDW(
            WString pwszServerName,                   /* IN               */
            PointerByReference ppwszSiteGUID          /*    OUT           */
            );

        void VmAfdFreeMemory(Pointer pMemory);

        int
        VmAfdGetSSLCertificate(
                String pszServerName,
                PointerByReference ppszCertificate,
                PointerByReference ppszPrivateKey
                );

        int
        VmAfdSetSSLCertificate(
                String pszServerName,
                String ppszCertificate,
                String ppszPrivateKey
                );

        int
        VmAfdSetMachineIDA(
                String pszServerName,
                String pszMachineId
                );

        int
        VmAfdSetMachineIDW(
                WString pwszServerName,
                WString pwszMachineId
                );

        int
        VmAfdGetMachineIDA(
                String             pszServerName,
                PointerByReference ppszMachineId
                );

        int
        VmAfdGetMachineIDW(
                WString            pwszServerName,
                PointerByReference ppwszMachineId
                );

        int
        VmAfdStartHeartbeatA(
                String             pszServiceName,
                int                port,
                PointerByReference ppHeartbeatHandle
                );

        int
        VmAfdStartHeartbeatW(
                WString            pwszServiceName,
                int                port,
                PointerByReference ppHeartbeatHandle
                );

        int
        VmAfdStopHeartbeat(
                Pointer           pHeartbeatHandle
                );
    }

    private Pointer _vmAfHeartbeatHandle;

    public static int getStatus(String hostname)
    {
        IntByReference pStatus = new IntByReference(0);
        int errCode = VmAfClientLibrary.INSTANCE.VmAfdGetStatusA(hostname, pStatus);
        if( errCode != 0 )
        {
            throw new VmAfClientNativeException(errCode);
        }
        return pStatus.getValue();
    }

    public static String getDomainName(String hostname)
    {
        PointerByReference ppszDomain = new PointerByReference();

        try
        {
            int errCode = VmAfClientLibrary.INSTANCE.VmAfdGetDomainNameA(
                                                        hostname,
                                                        ppszDomain);
            if (errCode != 0)
            {
                throw new VmAfClientNativeException(errCode);
            }

            return ppszDomain.getValue().getString(0);
        }
        finally
        {
            Pointer val = ppszDomain.getValue();

            if (val != Pointer.NULL)
            {
                VmAfClientLibrary.INSTANCE.VmAfdFreeMemory(val);
            }
        }
    }

    public static void setDomainName(String hostname, String domain)
    {
        int errCode = VmAfClientLibrary.INSTANCE.VmAfdSetDomainNameA(
                                                        hostname,
                                                        domain);
        if (errCode != 0)
        {
            throw new VmAfClientNativeException(errCode);
        }
    }

    public static String getDomainState(String hostname)
    {
        PointerByReference pDomainState = new PointerByReference();

        try
        {
            int errCode = VmAfClientLibrary.INSTANCE.VmAfdGetDomainStateA(
                                                        hostname,
                                                        pDomainState);
            if (errCode != 0)
            {
                throw new VmAfClientNativeException(errCode);
            }

            return pDomainState.getValue().getString(0);
        }
        finally
        {
            Pointer val = pDomainState.getValue();

            if (val != Pointer.NULL)
            {
                VmAfClientLibrary.INSTANCE.VmAfdFreeMemory(val);
            }
        }
    }

    public static String getLDU(String hostname)
    {
        PointerByReference ppszLDU = new PointerByReference();

        try
        {
            int errCode = VmAfClientLibrary.INSTANCE.VmAfdGetLDUA(
                                                        hostname,
                                                        ppszLDU);
            if (errCode != 0)
            {
                throw new VmAfClientNativeException(errCode);
            }

            return ppszLDU.getValue().getString(0);
        }
        finally
        {
            Pointer val = ppszLDU.getValue();

            if (val != Pointer.NULL)
            {
                VmAfClientLibrary.INSTANCE.VmAfdFreeMemory(val);
            }
        }
    }

    public static void setLDU(String hostname, String ldu)
    {
        int errCode = VmAfClientLibrary.INSTANCE.VmAfdSetLDUA(
                                                        hostname,
                                                        ldu);
        if (errCode != 0)
        {
            throw new VmAfClientNativeException(errCode);
        }
    }

    public static String getDCName(String hostname)
    {
        PointerByReference ppszDCName = new PointerByReference();

        try
        {
            int errCode = VmAfClientLibrary.INSTANCE.VmAfdGetDCNameA(
                                                        hostname,
                                                        ppszDCName);
            if (errCode != 0)
            {
                throw new VmAfClientNativeException(errCode);
            }

            return ppszDCName.getValue().getString(0);
        }
        finally
        {
            Pointer val = ppszDCName.getValue();

            if (val != Pointer.NULL)
            {
                VmAfClientLibrary.INSTANCE.VmAfdFreeMemory(val);
            }
        }
    }

    public static void setDCName(String hostname, String dc)
    {
        int errCode = VmAfClientLibrary.INSTANCE.VmAfdSetDCNameA(
                                                        hostname,
                                                        dc);
        if (errCode != 0)
        {
            throw new VmAfClientNativeException(errCode);
        }
    }

    public static int getRHTTPProxyPort(String hostname)
    {
        IntByReference pdwPort = new IntByReference(0);
        int errCode = VmAfClientLibrary.INSTANCE.VmAfdGetRHTTPProxyPortA(hostname, pdwPort);
        if( errCode != 0 )
        {
            throw new VmAfClientNativeException(errCode);
        }
        return pdwPort.getValue();
    }

    public static void setRHTTPProxyPort(String hostname, int port)
    {
        int errCode = VmAfClientLibrary.INSTANCE.VmAfdSetRHTTPProxyPortA(
                                                        hostname,
                                                        port);
        if (errCode != 0)
        {
            throw new VmAfClientNativeException(errCode);
        }
    }

    public static void setDCPort(String hostname, int port)
    {
        int errCode = VmAfClientLibrary.INSTANCE.VmAfdSetDCPortA(
                                                        hostname,
                                                        port);
        if (errCode != 0)
        {
            throw new VmAfClientNativeException(errCode);
        }
    }

    public static String getCMLocation(String hostname)
    {
        PointerByReference ppszCMLocation = new PointerByReference();

        try
        {
            int errCode = VmAfClientLibrary.INSTANCE.VmAfdGetCMLocationA(
                                                        hostname,
                                                        ppszCMLocation);
            if (errCode != 0)
            {
                throw new VmAfClientNativeException(errCode);
            }

            return ppszCMLocation.getValue().getString(0);
        }
        finally
        {
            Pointer val = ppszCMLocation.getValue();

            if (val != Pointer.NULL)
            {
                VmAfClientLibrary.INSTANCE.VmAfdFreeMemory(val);
            }
        }
    }

    public static String getLSLocation(String hostname)
    {
        PointerByReference ppszLSLocation = new PointerByReference();

        try
        {
            int errCode = VmAfClientLibrary.INSTANCE.VmAfdGetLSLocationA(
                                                        hostname,
                                                        ppszLSLocation);
            if (errCode != 0)
            {
                throw new VmAfClientNativeException(errCode);
            }

            return ppszLSLocation.getValue().getString(0);
        }
        finally
        {
            Pointer val = ppszLSLocation.getValue();

            if (val != Pointer.NULL)
            {
                VmAfClientLibrary.INSTANCE.VmAfdFreeMemory(val);
            }
        }
    }

    public static String getPNID(String hostname)
    {
        PointerByReference ppszPNID = new PointerByReference();

        try
        {
            int errCode = VmAfClientLibrary.INSTANCE.VmAfdGetPNIDA(
                                                        hostname,
                                                        ppszPNID);
            if (errCode != 0)
            {
                throw new VmAfClientNativeException(errCode);
            }

            return ppszPNID.getValue().getString(0);
        }
        finally
        {
            Pointer val = ppszPNID.getValue();

            if (val != Pointer.NULL)
            {
                VmAfClientLibrary.INSTANCE.VmAfdFreeMemory(val);
            }
        }
    }
    
    public static String getPNIDUrl(String hostname)
    {
        PointerByReference ppszPNID = new PointerByReference();

        try
        {
            int errCode = VmAfClientLibrary.INSTANCE.VmAfdGetPNIDForUrlA(
                                                        hostname,
                                                        ppszPNID);
            if (errCode != 0)
            {
                throw new VmAfClientNativeException(errCode);
            }

            return ppszPNID.getValue().getString(0);
        }
        finally
        {
            Pointer val = ppszPNID.getValue();

            if (val != Pointer.NULL)
            {
                VmAfClientLibrary.INSTANCE.VmAfdFreeMemory(val);
            }
        }
    }

    public static void setPNID(String hostname, String PNID)
    {
        int errCode = VmAfClientLibrary.INSTANCE.VmAfdSetPNIDA(
                                                        hostname,
                                                        PNID);
        if (errCode != 0)
        {
            throw new VmAfClientNativeException(errCode);
        }
    }
